manifests/appliance-follower.yaml
apiVersion: v1
kind: Service
metadata:
  name: follower
  namespace: conjur
  labels:
    deployment: follower
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    deployment: follower
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follower
  namespace: conjur
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: follower
  template:
    metadata:
      labels:
        deployment: follower
    spec:
      serviceAccountName: follower
      containers:
      - name: conjur-appliance
        image: <image-registry>/conjur-appliance:<conjur-version>
        command: ["/tmp/seedfile/start-follower.sh"]
        securityContext:
          privileged: true
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
          name: https
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
          - name: seedfile
            mountPath: /tmp/seedfile
            readOnly: true
      volumes:
      - name: seedfile
        emptyDir:
          medium: Memory
      - name: conjur-token
        emptyDir:
          medium: Memory
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              audience: https://conjur.vx/
              path: jwt
              expirationSeconds: 6000
# https://access.redhat.com/solutions/3696301
      hostAliases:
      - ip: 192.168.17.90
        hostnames:
        - conjur.vx
