manifests/p2f.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2f
  namespace: cityapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: p2f
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: p2f
  namespace: cityapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: p2f
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2f
  namespace: cityapp
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: p2f
  template:
    metadata:
      labels:
        deployment: p2f
      annotations:
        # https://docs.cyberark.com/conjur-enterprise/latest/en/Content/Integrations/k8s-ocp/cjr-k8s-secrets-provider-ref.htm
        conjur.org/container-mode: sidecar
        conjur.org/secrets-destination: file
        conjur.org/jwt-token-path: /var/run/secrets/tokens/jwt
        conjur.org/conjur-secrets.p2f: |
          - dbaddr: db_cityapp/address
          - dbuser: db_cityapp/username
          - dbpass: db_cityapp/password
        conjur.org/secret-file-path.p2f: ./worlddb.json
        conjur.org/secret-file-format.p2f: json
        conjur.org/secrets-refresh-interval: 10s
    spec:
      serviceAccountName: p2f
      containers:
      - name: cityapp
        image: docker.io/joetanx/cityapp:php
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: conjur-secrets
          mountPath: /conjur
          readOnly: true
      - name: secretsprovider
        image: docker.io/cyberark/secrets-provider-for-k8s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: podinfo
          mountPath: /conjur/podinfo
        - name: conjur-secrets
          mountPath: /conjur/secrets
        - name: jwt-token
          mountPath: /var/run/secrets/tokens
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: annotations
            fieldRef:
              fieldPath: metadata.annotations
      - name: conjur-secrets
        emptyDir:
          medium: Memory
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              path: jwt
              expirationSeconds: 6000
              audience: https://conjur.vx/
