manifests/p2s-vol.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2s-vol
  namespace: cityapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: p2s-vol
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: p2s-vol
  namespace: cityapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: p2s-vol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2s-vol
  namespace: cityapp
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: p2s-vol
  template:
    metadata:
      labels:
        deployment: p2s-vol
      annotations:
        # https://docs.cyberark.com/conjur-enterprise/latest/en/Content/Integrations/k8s-ocp/cjr-k8s-secrets-provider-ref.htm
        conjur.org/container-mode: sidecar
        conjur.org/secrets-destination: k8s_secrets
        conjur.org/jwt-token-path: /var/run/secrets/tokens/jwt
        conjur.org/secrets-refresh-interval: 10s
    spec:
      serviceAccountName: p2s-vol
      containers:
      - name: cityapp
        image: docker.io/joetanx/cityapp:php
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: secrets
          mountPath: /secrets
      - name: secretsprovider
        image: docker.io/cyberark/secrets-provider-for-k8s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: podinfo
          mountPath: /conjur/podinfo
        - name: jwt-token
          mountPath: /var/run/secrets/tokens
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: annotations
            fieldRef:
              fieldPath: metadata.annotations
      - name: secrets
        secret:
          secretName: p2s-vol-secret
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              path: jwt
              expirationSeconds: 6000
              audience: https://conjur.vx/
