manifests/sl.yaml
apiVersion: v1
kind: Service
metadata:
  name: sl
  namespace: cityapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: sl
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sl
  namespace: cityapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sl
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sl
  namespace: cityapp
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sl
  template:
    metadata:
      labels:
        deployment: sl
    spec:
      serviceAccountName: sl
      containers:
      - name: cityapp
        image: docker.io/joetanx/cityapp:php
        imagePullPolicy: IfNotPresent
      - name: secretless
        image: docker.io/cyberark/secretless-broker:latest
        imagePullPolicy: IfNotPresent
        args: ["-f", "/etc/secretless/sl-cm.yaml"]
        volumeMounts:
        - mountPath: /etc/secretless
          name: config
          readOnly: true
        - mountPath: /var/run/secrets/tokens
          name: jwt-token
      volumes:
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              path: jwt
              expirationSeconds: 6000
              audience: https://conjur.vx/
      - name: config
        configMap:
          name: sl-cm
